[metadata]
name = dungeons-catacombs-generator
version = v0.0.1
author = Kyle Rush
author_email = kyle@quackings.com
description = Simple package to generate dungeons from the catacombs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WindowsVistaisCool/catacombsGenerator
project_urls =
    Bug Tracker = https://github.com/WindowsVistaisCool/catacombsGenerator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
